dialog mail html template fixes #102